--- a/package.json
+++ b/package.json
@@ -1,21 +1,11 @@
 {
   "name": "sxngduxbluenight",
   "version": "1.0.0",
-  "description": "Your project description",
-  "main": "api/index.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "vercel dev",
-    "build": "vercel build",
-    "start": "vercel start"
+    "test": "echo \"Error: on test specfied\" && exit 1"
   },
-  "dependencies": {
-    "axios": "^0.21.1",
-    "cheerio": "^1.0.0-rc.10"
-  },
-  "devDependencies": {
-    "vercel": "^24.0.0"
-  },
-  "engines": {
-    "node": "14.x"
-  }
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
